Paper structure with makefile working.
Signed-off-by: Gabriela Navarro <navarro1703@gmail.com>

--- a/paper.tex
+++ b/paper.tex
@@ -6,11 +6,11 @@
 % See http://www.springer.com/computer/lncs/lncs+authors?SGWID=0-40209-0-0-0
 % for the full guidelines.
 %
-\documentclass{llncs}
+\documentclass{llncs/llncs}
 
 \begin{document}
 
-\title{Springer LNCS Example Paper}
+\title{Frequency Balance}
 %
 \titlerunning{Hamiltonian Mechanics}  % abbreviated title (for running head)
 %                                     also used for the TOC unless
